--- a/exercises/13-Anchor-Like-Button/styles.css
+++ b/exercises/13-Anchor-Like-Button/styles.css
@@ -1,7 +1,11 @@
 .orange-btn {
-	/*your code here*/
+	padding: 10px;
+	border-radius: 4px;
+	background-color: orange;
+	text-decoration: none;
+	margin: 50px;
 }
 
 .orange-btn:hover {
-	/*YOUR CODE HERE FOR THE HOVER STATE*/
+	background-color: rgb(112, 69, 13);
 }
