--- a/exercises/08-Rounded-Image/styles.css
+++ b/exercises/08-Rounded-Image/styles.css
@@ -1,6 +1,11 @@
 body {
 	background: #bdbdbd;
 }
-.rounded {
+
+#avatar {
 	border-radius: 100%;
+	background-image: url("https://assets.breatheco.de/apis/img/funny/einstein.png");
+	width: 300px;
+	height: 300px;
+	background-size: cover;
 }
